--- a/styles/index.css
+++ b/styles/index.css
@@ -305,13 +305,12 @@ h3, h4 {
 /* A elements that don't have a class get default styles */
 a:not([class]) {
   text-decoration-skip-ink: auto;
-  text-decoration: none;
   color: currentColor;
 }
 
-a[class] {
+/* a[class] {
     display: inline-block;
-}
+} */
 
 /* Make images easier to work with */
 img,
@@ -403,7 +402,7 @@ p,li,blockquote {
 }
 
 a {
-    color: currentColor;
+    color: var(--color-primary);
     transition: color .2s ease;
 }
 
@@ -458,6 +457,10 @@ UTILITIES
 
 .inline-block {
     display: inline-block;
+}
+
+.w-full {
+    width: 100%;
 }
 
 .block {
@@ -549,9 +552,72 @@ BLOCKS
 */
 
 /* button */
+/* https://piccalil.li/blog/how-i-build-a-button-component/ */
 .btn {
-    white-space: nowrap;
+    
+    /* Configuration */
+    --button-padding: .7em 1.2em;
+    --button-gap: .5em;
+    --button-bg: #342a21;
+    --button-color: #fff;
+    --button-hover-bg:#4b4b4a;
+    --button-hover-color:#fff;
+    --button-border-width:3px;
+    --button-border-style: solid;
+    --button-border-color: var(--button-bg);
+    --button-radius: 0.5em;
+
+    /* Layout and Spacing */
+    display: inline-flex;
+    align-items: center;
+    gap: var(--button-gap);
+    padding: var(--button-padding);
+
+    /* Colors */
+    background: var(--button-bg);
+    color: var(--button-color);
+
+    /* Stroke and radius */
+    border-width: var(--button-border-width);
+    border-style: var(--button-border-style);
+    border-color: var(--button-border-color);
+    border-radius: var(--button-radius);
+
+    /* Typography */
     text-decoration: none;
+    white-space: nowrap;
+    line-height: 1.1;
+    letter-spacing: .0.05ch;
+    font-family: var(--font-inter);
+    font-weight: var(--button-font-weight,700);
+    font-size: var(--button-font-size,1em);
+
+    /* Interactive */
+    cursor: pointer;
+}
+
+.btn svg {
+    height: var(--button-icon-size,1.2cap);
+    width: auto;
+    flex: none;
+}
+
+.btn:hover {
+    background: var(--button-hover-bg);
+    color: var(--button-hover-color);
+}
+
+.btn:focus {
+    /* --button-outline-offset: 1px; */
+    outline-width: var(--button-outline-width, var(--button-border-width));
+    outline-style: var(--button-outline-style, var(--button-border-style));
+    outline-color: var(--button-outline-color, var(--button-border-color));
+
+    outline-offset: var(--button-outline-offset, calc(var(--button-border-width) *2) );
+}
+
+.btn:active {
+    transform: scale(.99);
 }
 
 /* NAVIGATION */
@@ -561,7 +627,10 @@ BLOCKS
     padding: .8rem 0 ;
 }
 
-
+.site-head .nav-link {
+    text-decoration: none;
+    color: #18191F;
+}
 
 .site-head .inner {
     display: flex;
@@ -576,14 +645,9 @@ BLOCKS
     overflow: hidden;
     transition: height .3s ease-in-out;
     interpolate-size: allow-keywords;
+    padding: var(--size-300);
 }
 
-.site-navigation-mobile a {
-    /* outline: 1px solid red; */
-    display: block;
-    padding: .5rem 1rem;
-    
-}
 
 .navigation-active {
     height: auto;
@@ -592,6 +656,7 @@ BLOCKS
 .site-navigation-desktop {
     /* outline: 1px solid red; */
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     gap: var(--size-400);
  }
@@ -601,12 +666,6 @@ BLOCKS
     display: flex;
     align-items: center;
     /* gap: var(--size-400); */
- }
-
- .site-navigation-desktop a {
-    /* outline: 1px solid red; */
-    display: inline-block;
-    padding: .4rem 1rem;
  }
 
  .site-navigation-desktop .auth-links {
@@ -621,15 +680,26 @@ BLOCKS
     .site-navigation-desktop{
         display: none;
     }
+
+    .nav-link {
+        /* outline: 1px solid red; */
+        display: block;
+        padding: .5rem 1rem .5rem 0;
+    }
 }
 
 @media (min-width: 48rem) {
-    .btn {
+    .btn-toggler {
         display: none;
     }
 
     .site-navigation-mobile {
         display: none;
+    }
+
+    .nav-link {
+        /* outline: 1px solid red; */
+        padding: .4rem 1rem;
     }
 }
 
